# msv

./: .gitignore  Cargo.toml  README.md
docs/: AGENTS.md
docs/diagrams/: sequence.md
src/: error.rs  lib.rs  options.rs
src/layout/: bounds.rs  mod.rs  text.rs
src/sequence/: constants.rs  layout.rs  mod.rs  render.rs  types.rs
src/svg/: builder.rs  mod.rs  shapes.rs
tests/: sequence_test.rs
